avoiding overflow on table content

--- a/src/components/Result/index.scss
+++ b/src/components/Result/index.scss
@@ -49,6 +49,7 @@
       width: 100%;
       display: flex;
       align-items: center;
+      overflow: hidden;
 
       &:first-of-type {
         width: 15%;
@@ -57,11 +58,14 @@
 
       &:nth-of-type(2) {
         width: 55%;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
       }
 
       &:last-of-type {
         width: 30%;
-        padding-left: 5px;
+        padding-left: 20px;
       }
 
       &-thumb {
